...
"done.upper" = "DONE";
"next.upper" = "NEXT";
"confirm.upper" = "CONFIRM";
"continue.upper" = "CONTINUE";
"save.upper" = "SAVE";
"cancel" = "Cancel";
"done" = "Done";
"delete" = "Delete";
"yes" = "Yes";
"no" = "No";
"uploaded.progress" = "Uploading: %d %%";
"public.key" = "Public Key";
"route.hint" = "Route Hint";
...
"restoring-progress" = "Restoring:";
"restoring-content" = "Restoring content:";
"restoring-messages" = "Restoring messages:";
"restoring-contacts" = "Restoring contacts:";

//SIGNUP NEW USER
"signup.signup-options.connection-code-button" = "I Have a Connection Code";
"signup.signup-options.lite-node-button" = "Buy A Lite Node ($2.99)";
"signup.description.continue" = "Continue";
"signup.description.label" = "Paste your connection code\ninto Sphinx";
"signup.description.paste" = "Paste";
"signup.description.connection-code" = "connection code";
"signup.form.paste.code.placeholder" = "Paste your connection code...";
"signup.submit" = "Submit";
"signup.greeting.headline" = "You are now on the Lightning Network!";
...
"profile.wifi-password-title" = "WiFi password";
"profile.wifi-password-message" = "Enter the WiFi password for %@";
"profile.wifi-password-error" = "WiFi password can not be empty";
"profile.seed-sent-successfully" = "Seed sent to hardware successfully";
"profile.error-sending-seed" = "Error sending seed to hardware";
"profile.error-getting-hardware-public-key" = "Error getting hardware public key";
"profile.store-mnemonic" = "Store your Mnemonic securely";
"profile.network-check-title" = "Check your network";
"profile.network-check-message" = "Before starting you need to connect to \"sphinxkey\" WiFi network. Otherwise you won’t be able to setup your device. Are you connected to this network?";
"profile.mnemonic-copied" = "Mnemonic words copied to clipboard";
"profile.bitcoin-network" = "Bitcoin Network";
"profile.select-bitcoin-network" = "Select Bitcoin Network";
"profile.mnemonic-generation-title" = "Mnemonic generation";
...
"profile.mnemonic-pull-stored" = "Pull stored mnemonic words from memory";
"profile.seed-validation-error-title" = "Seed Validation Error";
"signup.setup-swarm-admin-error-title" = "Connecting to Swarm Failed";
"signup.setup-swarm-admin-error-prompt" = "There was an error connecting to swarm. Please try again.";
"profile.mnemonic-incorrect-length" = "Your seed phrase must be exactly 12 or 24 words.";
"profile.mnemonic-invalid-word" = "It appears you've typed an invalid word: word #";
"profile.mnemonic-generate-or-import-title" = "Choose Your Seed Method";
"profile.mnemonic-generate-or-import-prompt" = "Would you like to generate a new seed phrase or import an existing one?";
"profile.mnemonic-generate-prompt" = "Generate";
"profile.mnemonic-import-prompt" = "Import";
"profile.signer-setup-title" = "Setup";
"profile.signer-setup-message" = "Setup hardware device or phone signer";
"profile.harware-option" = "Hardware";
"profile.phone-signer-option" = "Phone Signer";

//PIN
...
"invite.payment.sent" = " Payment sent, waiting confirmation";
"invite.pay" = "Tap to pay and activate the invite";
"invite.ready" = "Ready! Tap to share. Expires in 24 hrs";
"invite.signing.on" = "%@ is signing on";
"invite.expired" = "Expired";
"invite.signup.complete" = "Signup complete";
"new.user" = "New user";
"existing.user" = "Existing user";
"invite.expired.title" = "Invite expired";
"invite.expired.message" = "Invites expire after 24 hours. Please create a new invitation.";
"invite.pending.title" = "Pending invite";
"invite.pending.message" = "Sorry about the delay. Your invitation is being processed.";
"invite.in.progress.title" = "Invite in progress";
"invite.in.progress.message" = "%@ is signing on.";
...
