...
import CoreData
import SwiftyJSON


class DashboardRootViewController: RootViewController {
    
    @IBOutlet weak var bottomBar: UIView!
    @IBOutlet weak var bottomBarContainer: UIView!
    @IBOutlet weak var dismissibleBar: CustomDismissibleView!
    @IBOutlet weak var podcastSmallPlayer: PodcastSmallPlayer!
    @IBOutlet weak var headerView: ChatListHeader!
    @IBOutlet weak var searchBar: UIView!
    @IBOutlet weak var searchTextField: ClearNonActiveTextField!
    @IBOutlet weak var searchBarContainer: UIView!
    @IBOutlet weak var searchBarTrailing: NSLayoutConstraint!
    @IBOutlet weak var mainContentContainerView: UIView!
    @IBOutlet weak var restoreProgressView: RestoreProgressView!
    @IBOutlet weak var addTribeTrailing: NSLayoutConstraint!
    @IBOutlet weak var addTribeButton: UIButton!
    @IBOutlet weak var addTribeIconLabel: UILabel!

    @IBOutlet weak var workspaceSettingsTrailing: NSLayoutConstraint!
...
