...
    @IBOutlet weak var titleLabel: UILabel!
    @IBOutlet weak var contactImageView: UIImageView!
    @IBOutlet weak var contactNameLabel: UILabel!
    @IBOutlet weak var welcomeMessageLabel: UILabel!
    @IBOutlet weak var nextButtonContainer: UIView!
    @IBOutlet weak var loadingWheel: UIActivityIndicatorView!
    @IBOutlet weak var nextButton: UIButton!
    
    var loading = false {
        didSet {
            LoadingWheelHelper.toggleLoadingWheel(loading: loading, loadingWheel: loadingWheel, loadingWheelColor: UIColor.white, view: view)
        }
    }
...
        
        setTitle()
    }
    
    func setTitle() {
        titleLabel.text = "message.from.friend".localized
        nextButton.accessibilityIdentifier = "getStartedNextButton"
    }
    
    @IBAction func nextButtonTouched() {
        loading = true
        self.continueToPinView()
    }
...
